# game_tutorials

./: .gitignore  CMakeLists.txt  readme.md
2d_shoot_em/: CMakeLists.txt  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  sdl.h  stage.c  stage.h  structs.h  util.c  util.h
cmake/: readme.md
